# PeopleCounter

./: .gitignore  CMakeLists.txt  main.cpp
